@@ -1173,18 +1173,13 @@ gimp_dialog_factories_hide_with_display (void)
 void
 gimp_dialog_factories_toggle (void)
 {
-  switch (dialogs_state)
+  if (dialogs_state == GIMP_DIALOGS_SHOWN)
     {
-    case GIMP_DIALOGS_SHOWN:
       gimp_dialog_factories_set_state (GIMP_DIALOGS_HIDDEN_EXPLICITLY);
-      break;
-
-    case GIMP_DIALOGS_HIDDEN_EXPLICITLY:
+    }
+  else
+    {
       gimp_dialog_factories_set_state (GIMP_DIALOGS_SHOWN);
-      break;
-
-    case GIMP_DIALOGS_HIDDEN_WITH_DISPLAY:
-      break;
     }
 }
 
